--- a/.github/workflows/register.yml
+++ b/.github/workflows/register.yml
@@ -17,7 +17,7 @@ jobs:
         poetry-version: 1.1.12
 
     - name: Pip update
-      run: pip install -U wheel pip
+      run: pip install -U wheel pip prefect
 
     # - name: Poetry Settings
     #   run: poetry config virtualenvs.create false
