--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,46 @@
-
+certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
+charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
+click==8.1.3; python_version >= "3.8"
+cloudpickle==2.1.0; python_version >= "3.8"
+colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
+croniter==1.3.5; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+dask==2022.7.1; python_version >= "3.8"
+distributed==2022.7.1; python_version >= "3.8"
+docker==5.0.3; python_version >= "3.7"
+fsspec==2022.5.0; python_version >= "3.8"
+heapdict==1.0.1; python_version >= "3.8"
+idna==3.3; python_version >= "3.7" and python_version < "4"
+importlib-resources==5.9.0; python_version >= "3.7"
+jinja2==3.1.2; python_version >= "3.8"
+locket==1.0.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.8"
+markupsafe==2.1.1; python_version >= "3.8"
+marshmallow-oneofschema==3.0.1; python_version >= "3.7"
+marshmallow==3.17.0; python_version >= "3.7"
+msgpack==1.0.4; python_version >= "3.8"
+mypy-extensions==0.4.3; python_version >= "3.7"
+packaging==21.3; python_version >= "3.8"
+partd==1.2.0; python_version >= "3.8"
+pendulum==2.1.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+prefect==1.2.3; python_version >= "3.7"
+psutil==5.9.1; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.8"
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.8"
+python-box==6.0.2; python_version >= "3.7"
+python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+python-slugify==6.1.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+pytz==2022.1; python_version >= "3.7"
+pytzdata==2020.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+pywin32==227; sys_platform == "win32" and python_version >= "3.7"
+pyyaml==6.0; python_version >= "3.8"
+requests==2.28.1; python_version >= "3.7" and python_version < "4"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+sortedcontainers==2.4.0; python_version >= "3.8"
+tabulate==0.8.10; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+tblib==1.7.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
+text-unidecode==1.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+toolz==0.12.0; python_version >= "3.8"
+tornado==6.1; python_version >= "3.8"
+urllib3==1.26.11; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.8"
+websocket-client==1.3.3; python_version >= "3.7"
+zict==2.2.0; python_version >= "3.8"
+zipp==3.8.1; python_version < "3.10" and python_version >= "3.7"
