--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
 - repo: https://github.com/zzstoatzz/registering-prefect-flows
-  rev: main
+  rev: 4cc6886
   hooks:
   - id: update-requirements-from-pyproject
