--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 prefect = "1.2.3"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 
