--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.1; python_full_version >= "3.6.2" and python_version >= "3.7"
 certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
 click==8.1.3; python_version >= "3.8"
@@ -8,8 +9,11 @@ dask==2022.7.1; python_version >= "3.8"
 distributed==2022.7.1; python_version >= "3.8"
 docker==5.0.3; python_version >= "3.7"
 fsspec==2022.5.0; python_version >= "3.8"
+h11==0.12.0; python_version >= "3.7"
 heapdict==1.0.1; python_version >= "3.8"
-idna==3.3; python_version >= "3.7" and python_version < "4"
+httpcore==0.15.0; python_version >= "3.7"
+httpx==0.23.0; python_version >= "3.7"
+idna==3.3; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.2"
 importlib-resources==5.9.0; python_version >= "3.7"
 jinja2==3.1.2; python_version >= "3.8"
 locket==1.0.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.8"
@@ -32,7 +36,9 @@ pytzdata==2020.1; python_version >= "3.7" and python_full_version < "3.0.0" or p
 pywin32==227; sys_platform == "win32" and python_version >= "3.7"
 pyyaml==6.0; python_version >= "3.8"
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
+rfc3986==1.5.0; python_version >= "3.7"
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+sniffio==1.2.0; python_full_version >= "3.6.2" and python_version >= "3.7"
 sortedcontainers==2.4.0; python_version >= "3.8"
 tabulate==0.8.10; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 tblib==1.7.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
