--- a/.github/workflows/register.yml
+++ b/.github/workflows/register.yml
@@ -1,8 +1,9 @@
-name: Register Flow from dev
+name: Register Flow
 on:
   push:
     branches:
       - main
+      - dev
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -20,7 +21,6 @@ jobs:
       if: github.ref == 'refs/heads/main' && success()
       env:
         TOKEN: "${{ github.ref == 'refs/heads/main' && secrets.PREFECT_AUTH || secrets.PREFECT_DEV_AUTH }}"
-
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
